src/objects/CKE_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address_Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line2__c</fullName>
        <label>Address_Line2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line3__c</fullName>
        <label>Address_Line3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City/Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cupcake_Code__c</fullName>
        <description>This is the code that originates in Progress. A user receives this code in their pack request email and subsequently enters it when paying in to enable Progress to match pack requests to payments</description>
        <label>Cupcake Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extended_Status__c</fullName>
        <label>Extended Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Aid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optin_Cupcakes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cupcake Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optin_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optin_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optin_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optin_Social_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Media Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optin_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TC Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optout_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Optout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>visa</fullName>
                </value>
                <value>
                    <fullName>mastercard</fullName>
                </value>
                <value>
                    <fullName>paypal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paypal_Token__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Paypal Token</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress_Form_Id__c</fullName>
        <label>Progress Form ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proximity_to_Dementia__c</fullName>
        <label>Proximity to Dementia</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Checkout1</fullName>
                </value>
                <value>
                    <fullName>Checkout2</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Submitted__c</fullName>
        <label>Time Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Reference</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Time__c</fullName>
        <label>Transaction Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pay-in</fullName>
                </value>
                <value>
                    <fullName>Donation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CKE Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Postcode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Completed_All_Time</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Postcode__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed All Time</label>
    </listViews>
    <listViews>
        <fullName>Completed_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Time_Submitted__c</columns>
        <columns>Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Completed This Week</label>
    </listViews>
    <listViews>
        <fullName>Completed_Today</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Type__c</columns>
        <columns>Email__c</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Time_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Completed Today</label>
    </listViews>
    <listViews>
        <fullName>Failed_or_Pending_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Time_Submitted__c</columns>
        <columns>Amount__c</columns>
        <columns>Email__c</columns>
        <columns>Status__c</columns>
        <columns>Extended_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Failed or Pending This Week</label>
    </listViews>
    <listViews>
        <fullName>Test_Payments</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Extended_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Test Payments</label>
    </listViews>
    <nameField>
        <displayFormat>PMT-{0000000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CKE Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>